<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MathQuizActivity"
    android:background="@android:color/black"
    android:padding="16dp">

    <TextView
        android:id="@+id/mScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textSize="36sp"
        android:textColor="@android:color/white"
    />

    <TextView
        android:id="@+id/mCategoryType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mScore"
        android:text="@string/category"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/mCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@android:color/white"
        android:text="@string/timer"
        android:layout_alignParentEnd="true"
    />

    <TextView
        android:id="@+id/qnResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mQuestion"
        android:textSize="36sp"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        />
    <TextView
        android:id="@+id/mQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radio_group"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        android:text="@string/questions"
        android:textSize="24sp"
        android:textColor="@android:color/white"
    />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/mRadioBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/white"
            android:text="@string/opt1"/>


        <RadioButton
            android:id="@+id/mRadioBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/white"
            android:text="@string/opt2"/>


        <RadioButton
            android:id="@+id/mRadioBtn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/white"
            android:text="@string/opt3"/>

        <RadioButton
            android:id="@+id/mRadioBtn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/white"
            android:text="@string/opt4"/>

    </RadioGroup>

    <Button
        android:id="@+id/mConfirmNextQsn"
        android:layout_below="@+id/radio_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/submitBtn"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/button"
        android:textColor="#FFFF"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/mFinalScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mConfirmNextQsn"
        android:textSize="36sp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        />


</RelativeLayout>

