<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/black"
    android:padding="16dp">

    <TextView
        android:id="@+id/titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:textStyle="bold"
        />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/mathAnimation"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@id/titles"
        android:layout_centerHorizontal="true"
        app:lottie_fileName="18695-what-is-math.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        tools:ignore="ContentDescription"
        />

    <Spinner
        android:id="@+id/mCategory"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mathAnimation"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:padding="8dp"
        />
    <Button
        android:id="@+id/mStartQuiz"
        android:text="@string/startQuizButton"
        android:layout_below="@+id/mCategory"
        android:layout_centerInParent="true"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/button"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/mHighscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mStartQuiz"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:layout_marginTop="36dp"/>

</RelativeLayout>